[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/themes/light/theme_light.tres" type="Theme" id=1]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/utilities/preferences_dialog.gd" type="Script" id=2]
[ext_resource path="res://addons/tilth_project_tracker/tilth/themes/light/panel-material-light.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/tilth_project_tracker/tilth/fonts/source_sans_pro/bold-18.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/tilth_project_tracker/tilth/themes/light/popup-material-gray-light.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.960784, 0.964706, 1 )
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.4, 0.443137, 0.466667, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.686275, 0.741176, 0.768627, 1 )

[node name="PreferencesDialog" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/close_v_ofs = 40
custom_constants/title_height = 40
custom_fonts/title_font = ExtResource( 4 )
custom_styles/panel = ExtResource( 5 )
window_title = "Preferences"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaneBorder" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxLayout" type="VBoxContainer" parent="PaneBorder"]
margin_left = 3.0
margin_right = 1363.0
margin_bottom = 765.0

[node name="BodyContainer" type="PanelContainer" parent="PaneBorder/VBoxLayout"]
margin_right = 1360.0
margin_bottom = 201.0
custom_styles/panel = SubResource( 2 )

[node name="Padding" type="MarginContainer" parent="PaneBorder/VBoxLayout/BodyContainer"]
margin_right = 1360.0
margin_bottom = 201.0
custom_constants/margin_right = 5
custom_constants/margin_top = 15
custom_constants/margin_left = 5
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VLayout" type="VBoxContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding"]
margin_left = 5.0
margin_top = 15.0
margin_right = 1355.0
margin_bottom = 186.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout"]
margin_right = 1350.0
margin_bottom = 62.0

[node name="ThemeLabel" type="Label" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer"]
margin_right = 1350.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Theme (more themes in the works):"

[node name="PanelContainer" type="PanelContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer"]
margin_top = 27.0
margin_right = 1350.0
margin_bottom = 62.0
custom_styles/panel = ExtResource( 3 )

[node name="Paddings" type="MarginContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer/PanelContainer"]
margin_right = 1350.0
margin_bottom = 35.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="ThemeOptions" type="OptionButton" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer/PanelContainer/Paddings"]
margin_left = 3.0
margin_top = 3.0
margin_right = 27.0
margin_bottom = 32.0
size_flags_horizontal = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout"]
margin_top = 82.0
margin_right = 1350.0
margin_bottom = 171.0

[node name="DataPathLabel" type="Label" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer2"]
margin_right = 1350.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Data path"

[node name="DataPathNote" type="Label" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer2"]
margin_top = 27.0
margin_right = 1350.0
margin_bottom = 50.0
text = "consider setting to a cloud synced folder. e.g. GoogleDrive, Dropbox, ..."

[node name="PanelContainer" type="PanelContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer2"]
margin_top = 54.0
margin_right = 1350.0
margin_bottom = 89.0
custom_styles/panel = ExtResource( 3 )

[node name="Padding" type="MarginContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer2/PanelContainer"]
margin_right = 1350.0
margin_bottom = 35.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="HLayoutDataPath" type="HBoxContainer" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer2/PanelContainer/Padding"]
margin_left = 3.0
margin_top = 3.0
margin_right = 1347.0
margin_bottom = 32.0

[node name="DataPathValue" type="Label" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer2/PanelContainer/Padding/HLayoutDataPath"]
margin_top = 3.0
margin_right = 1273.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="BrowseButton" type="Button" parent="PaneBorder/VBoxLayout/BodyContainer/Padding/VLayout/VBoxContainer2/PanelContainer/Padding/HLayoutDataPath"]
margin_left = 1277.0
margin_right = 1344.0
margin_bottom = 29.0
text = "Browse"

[node name="DataPathFileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 935.0
margin_top = 339.0
margin_right = 1351.0
margin_bottom = 528.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/Volumes/development/Godot/Tilth"
current_path = "/Volumes/development/Godot/Tilth/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackupPathFileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 939.0
margin_top = 569.0
margin_right = 1355.0
margin_bottom = 758.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/Volumes/development/Godot/Tilth"
current_path = "/Volumes/development/Godot/Tilth/"

[node name="ConfirmCopyProjects" type="AcceptDialog" parent="."]
visible = true
margin_left = 528.0
margin_top = 619.0
margin_right = 928.0
margin_bottom = 759.0
popup_exclusive = true
dialog_text = "Would you like to copy existng Projects to the new path?"
